<resources>
    <string name="app_name">McKerracherClassFinal</string>
    <string name="company_logo">Company Logo</string>
    <string name="vanilla_latte_smooth_espresso_with_vanilla_flavor">Vanilla Latte - Smooth espresso with vanilla flavor.</string>
    <string name="price_4_50">Price: $4.50</string>
    <string name="quantity">Quantity</string>
    <string name="add_to_order">Add to Order</string>
    <string name="mocha_creamy_chocolate_flavor_available_with_whip">Mocha - Creamy chocolate flavor. Available with whip.</string>
    <string name="americano_the_strong_classic_pick_me_up">Americano - The strong, classic pick-me-up!</string>
</resources>