<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <ImageView
        android:id="@+id/AmericanoImage"
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:src="@drawable/americano"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/americanoDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/americano_the_strong_classic_pick_me_up"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/americanoPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_4_50"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/americanoQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/quantity"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/confirmAmericanoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_to_order"
        android:layout_marginTop="16dp" />

</LinearLayout>
